# Android-Lua

./: README.md  arch.puml  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/cc/chenhe/lib/androidlua/demo/: AllActivitiesActivity.java  ButtonListActivity.java  MainActivity.java  MyApplication.java
app/src/main/java/cc/chenhe/lib/androidlua/demo/chatbox/: BaseMessageView.java  BasicChatMessage.java  ChatBoxActivity.java  ChatBoxView.java  ToolMessageView.java
app/src/main/res/layout/: activity_all_activities.xml  activity_main.xml  generic_button.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
assetmanager/: build.gradle
assetmanager/src/androidTest/java/fun/xjbcode/assetmanager/: ExampleInstrumentedTest.kt
assetmanager/src/main/java/fun/xjbcode/assetmanager/: Asset.kt
assetmanager/src/test/java/fun/xjbcode/assetmanager/: ExampleUnitTest.kt
glm4/: build.gradle
glm4/src/main/java/fun/xjbcode/glm4/: ChatAPI.java
llamaqwen1/: build.gradle
llamaqwen1/src/androidTest/java/fun/xjbcode/llamaqwen/: ExampleInstrumentedTest.java
llamaqwen1/src/main/cpp/: CMakeLists.txt  llamaqwen.cpp
llamaqwen1/src/main/java/fun/xjbcode/llamaqwen/: NativeLib.java
llamaqwen1/src/test/java/fun/xjbcode/llamaqwen/: ExampleUnitTest.java
